@@ -1,3 +1,4 @@
-EBUILD qutim-histman-0.2.9999.ebuild 937 RMD160 89974ad3838087e79938c24bcbc26639ab5a09cd SHA1 e45961425ae40431a848cedb61ebdae1d704f866 SHA256 d253ffab8813ab09c24e07ba5cc242cfcdf74ec164776d28995a182ad2989424
-MISC ChangeLog 280 RMD160 7885f02cf14baee12991cb8b0bb229d94c78dbef SHA1 ee0a6cebd91c7ca5eab73dbe3bd9adbfd548e7ea SHA256 4e54bb16e0ee16d137b6fc66e6105fdfff3957c8047017515079eeb16d57f776
+EBUILD qutim-histman-0.2.9999.ebuild 966 RMD160 68786eca68a18ecbc8671667b8c18eb7501d51e2 SHA1 45a2b72456302a6418d2a16ab789e83665ecedb2 SHA256 5ea1190bd5058549926c994747b59e6f4f285e0d3b2f9548fa383c73e437b827
+EBUILD qutim-histman-0.3.9999.ebuild 1069 RMD160 070433b929aa4f15b8c09e5874a1c4eae2c83ed5 SHA1 8e28477b5a3bd9dfe0cf29098970426c6a75776b SHA256 a4080f15a6f43b82b9e498bd262dfb25b83994f78316af21e484b35c7ca3c441
+MISC ChangeLog 453 RMD160 ee3a9974e6af1d4923a89ab53a36aef130c3a6ac SHA1 60881bf09ddc11ee899c6c979a4c3e679d3ffb04 SHA256 c8d497edcfd62f9e6ee197091c572df8aa6a4b31e1f60bf87fad00fa01e7f822
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
